plang/testing/logs/false-incorrect/195/program195.p.p.out
Error at lH (wrh) U53p LKm1 (dUy41) :- (((vp (K) (AA1) o (zLBIa (pjr5) zNC (TVVzq) YuMJ)))); qPz (StA) (u nvny0) nj.:1:29 error: 
lH (wrh) U53p LKm1 (dUy41) :- (((vp (K) (AA1) o (zLBIa (pjr5) zNC (TVVzq) YuMJ)))); qPz (StA) (u nvny0) nj.
                            ^
Error at lH (wrh) U53p LKm1 (dUy41) :- (((vp (K) (AA1) o (zLBIa (pjr5) zNC (TVVzq) YuMJ)))); qPz (StA) (u nvny0) nj.:1:79 error: 
lH (wrh) U53p LKm1 (dUy41) :- (((vp (K) (AA1) o (zLBIa (pjr5) zNC (TVVzq) YuMJ)))); qPz (StA) (u nvny0) nj.
                                                                              ^
Error at ? (bw51 UrW (Z11) IIqp); (gf Z WhD2l (vnL (p) (r) (A) Y); hVu7B (h5 (sya b)) JvFcB, cTXq (Y) w (Wac), lHP TKa (nT AJFp dPGd vZFx (y pul uz (TbRE) (U))) (eO Dm1L (WyO) (WA0T) (c FQQIk YYvMb jOHGK))), sK (Qx8o5) XzR7h i, ubG wO bFG (dJo (Kk3s)) (VDA), p (weho j (Bt) (DhpbG) I), aB51 (Sof8D) A3hJ, (wVh), (smRKn (U) (zn (VXV5t) (DUd) i23a v5E) (S3) TATy).:15:1 error: 
? (bw51 UrW (Z11) IIqp); (gf Z WhD2l (vnL (p) (r) (A) Y); hVu7B (h5 (sya b)) JvFcB, cTXq (Y) w (Wac), lHP TKa (nT AJFp dPGd vZFx (y pul uz (TbRE) (U))) (eO Dm1L (WyO) (WA0T) (c FQQIk YYvMb jOHGK))), sK (Qx8o5) XzR7h i, ubG wO bFG (dJo (Kk3s)) (VDA), p (weho j (Bt) (DhpbG) I), aB51 (Sof8D) A3hJ, (wVh), (smRKn (U) (zn (VXV5t) (DUd) i23a v5E) (S3) TATy).
^