plang/testing/logs/false-incorrect/195/program195.p.p
lH (wrh) U53p LKm1 (dUy41) :- (((vp (K) (AA1) o (zLBIa (pjr5) zNC (TVVzq) YuMJ)))); qPz (StA) (u nvny0) nj.

p8d a n (ks (tBLG4 b) (Gh)) hhil :- oCJMO (W8) (B24).


qIP.


jM7pz FLi (l (j dxU (TGfYi) (Uw) pCKY) (Hp21)) H5E :- bbW (ykHSg kD v) HhZ.


t :- rm (qiu Vvecz); (n vHs nX3Sv; g (OoZ6j) (Ja)); dIUVo (XDp) (aTAQ BgT9r O (LG4)); (b aitZZ, ueKW JpT (QHcuy)), (n; k (ll2); i1wb xtt2o (gCG6); e1r (g7Xt a9E2r (W6J)) t0 (pdm4 S0e pI8G5) (EJV17)); vyY (e1Q kYipp PK) dQKQz QkA.
z1xjt :- jz (d AYO); uFUvG sI (PEpQ) (zYZty (d (tkBk (A4) (lxg9 (M) Sq (RQXFp) lD)) (G91n) (dUfs (ZWG) R3 (R) Tt7) X) z8 (VS1X6)).

? (bw51 UrW (Z11) IIqp); (gf Z WhD2l (vnL (p) (r) (A) Y); hVu7B (h5 (sya b)) JvFcB, cTXq (Y) w (Wac), lHP TKa (nT AJFp dPGd vZFx (y pul uz (TbRE) (U))) (eO Dm1L (WyO) (WA0T) (c FQQIk YYvMb jOHGK))), sK (Qx8o5) XzR7h i, ubG wO bFG (dJo (Kk3s)) (VDA), p (weho j (Bt) (DhpbG) I), aB51 (Sof8D) A3hJ, (wVh), (smRKn (U) (zn (VXV5t) (DUd) i23a v5E) (S3) TATy).


